fix: wrong image name

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   electrumx:
-    image: lucky2077/atomicdex-electrumx:latest
+    image: lucky2077/atomicals-electrumx:latest
     restart: always
     ports:
       - 50004:50004
@@ -9,3 +9,5 @@ services:
       - ./data:/data
     environment:
       - DAEMON_URL=${DAEMON_URL:-electrumx:electrumx@127.0.0.1:8332}
+      - COIN=BitCoin
+      
