build image every day

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,8 @@
 name: Build and Push Docker Images
 
 on:
+  schedule:
+    - cron: "0 0 * * *"
   push:
     branches: ["main"]
 
@@ -9,6 +11,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          # list of Docker images to use as base name for tags
+          images: |
+            lucky2077/atomicals-electrumx
+          # generate Docker tags based on the following events/attributes
+          tags: |
+            type=schedule,pattern={{date 'YYYYMMDD'}}
+            type=raw,value=latest,enable={{is_default_branch}}
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
@@ -34,4 +47,4 @@ jobs:
           # Push is a shorthand for --output=type=registry
           push: true # optional, default is false
           # List of tags
-          tags: lucky2077/atomicals-electrumx:latest # optional
+          tags: ${{ steps.meta.outputs.tags }}
