build latest everyday

--- a/.github/workflows/build-everyday.yml
+++ b/.github/workflows/build-everyday.yml
@@ -15,8 +15,17 @@ jobs:
         run: |
           echo "version=$(date +'%Y%m%d')" >> "$GITHUB_OUTPUT"
 
-  build:
-    needs: gen-version
+  build-latest:
+    permissions:
+      contents: read
+      id-token: write
+    uses: ./.github/workflows/build-image.yml
+    with:
+      image-version: latest
+    secrets: inherit
+
+  build-daily:
+    needs: [gen-version, build-latest]
     permissions:
       contents: read
       id-token: write
