--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   electrumx:
-    image: lucky2077/atomicals-electrumx:v.1.3.8.0
+    image: lucky2077/atomicals-electrumx:1.3.8.1
     restart: always
     ports:
       - 50001:50001
